--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
     </main>
     <!--final conteudo-principal-->
 
+    <!--inicio roda pe-->
+    <footer id="roda-pe">
+        <p>&copy; Todos os direitos reservados - <a href="https://www.linkedin.com/in/lucass-correa/" target="_blank">Lucas Corrêa</a></p>
+    </footer>
+    <!--final roda pé-->
+
 
 </body>
 </html>
